# video2mp3

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: build.yml
src/: App.svelte  app.js  cli.rs  converter.rs  gui.rs  main.js  main.rs  stores.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: convert.rs  mod.rs  probe.rs  youtube.rs
src-tauri/src/config/: ffmpeg.yaml  ytdlp.yaml
src-tauri/src/core/: config.rs  convert_youtube.rs  mod.rs  probe.rs
src/config/: ffmpeg.yaml  ffprobe.yaml  ytdlp.yaml
src/core/: config.rs  convert.rs  convert_file.rs  convert_youtube.rs  mod.rs  probe.rs  types.rs
src/gui/: helpers.rs  layout.rs  logic.rs  mod.rs  state.rs  theme.rs
src/gui/layout/: bottom_panel.rs  central_panel.rs  mod.rs  top_panel.rs  widgets.rs
src/gui/logic/: conversion_ops.rs  file_ops.rs  message_handler.rs  mod.rs  youtube_ops.rs
src/lib/: BottomBar.svelte  FileQueue.svelte  Settings.svelte  TopBar.svelte  YouTubeBar.svelte
