[package]
name = "video2mp3"
version = "0.1.5"
edition = "2024"
license = "MIT"

[dependencies]
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eframe     = "0.34"
rfd        = "0.17"
image      = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
dirs       = "6.0"