[package]
name    = "video2mp3"
version = "2.0.0"
edition = "2024"
license = "MIT"

[lib]
name       = "video2mp3_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                = { version = "2", features = [] }
tauri-plugin-dialog  = "2"
tauri-plugin-fs      = "2"
tauri-plugin-shell   = "2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
dirs       = "6.0"
yaml_serde = "0.10.4"
